--- a/src/templates/_map.twig
+++ b/src/templates/_map.twig
@@ -2,7 +2,7 @@
 
 <a class="btn" id="map-btn">{{ 'Relationships'|t('elementmap') }}</a>
 
-{% set ajaxBaseUrl = cpUrl("elementmap/#{class}/") %}
+{% set ajaxBaseUrl = cpUrl("elementmap/#{element.site.handle}/#{class}/") %}
 
 {% js at POS_END %}
     ajaxBaseUrl = '{{ ajaxBaseUrl }}';
