--- a/src/templates/_map_content.twig
+++ b/src/templates/_map_content.twig
@@ -1,11 +1,9 @@
+{% from _self import showElement %}
 <div class="map">
     <label>{{ 'References to This Element'|t('elementmap') }}</label>
     <ul>
         {% for element in map.incoming %}
-            <li>
-                <a target="_blank" href="{{ element.url }}" data-id="{{ element.id }}" data-editable><span
-                            class="icon icon-mask">{{ svg(element.icon) }}</span>{{ element.title }}</a>
-            </li>
+            {{ showElement(element) }}
         {% endfor %}
         {% if map.incoming | length == 0 %}
             <li>{{ 'None'|t('elementmap') }}</li>
@@ -16,13 +14,29 @@
     <label>{{ 'References to Other Elements'|t('elementmap') }}</label>
     <ul>
         {% for element in map.outgoing %}
-            <li>
-                <a target="_blank" href="{{ element.url }}" data-id="{{ element.id }}" data-editable><span
-                            class="icon icon-mask">{{ svg(element.icon) }}</span>{{ element.title }}</a>
-            </li>
+            {{ showElement(element) }}
         {% endfor %}
         {% if map.outgoing | length == 0 %}
             <li>{{ 'None'|t('elementmap') }}</li>
         {% endif %}
     </ul>
 </div>
+
+{% macro showElement(element) %}
+    <li>
+        <div style="display: flex">
+            {% if element.icon is defined %}
+                <div class="icon icon-mask">{{ svg(element.icon) }}</div>
+            {% endif %}
+
+            {% if element.image is defined %}
+                <div >
+                    <img class="thumbnail" src="{{ element.image }}" height="32" width="32">
+                </div>
+            {% endif %}
+            <a href="{{ element.url }}" data-id="{{ element.id }}" data-editable>
+                {{ element.title }}
+            </a>
+        </div>
+    </li>
+{% endmacro %}
