--- a/src/templates/_table.twig
+++ b/src/templates/_table.twig
@@ -6,9 +6,9 @@
             {% for element in elements %}
                 <li>
                     <a target="_blank" href="{{ element.url }}" data-id="{{ element.id }}" data-editable>
-                        {% if element.icon is defined %}
+                        {#{% if element.icon is defined %}
                             <span class="icon icon-mask">{{ svg(element.icon) }}</span>
-                        {% endif %}
+                        {% endif %}#}
                         {{ element.title }}</a>
                 </li>
             {% endfor %}
